--- a/cakecode_site/discord_list/templates/discord_list/home.html
+++ b/cakecode_site/discord_list/templates/discord_list/home.html
@@ -62,7 +62,7 @@
             </defs>
         </svg>
         <h1 class="mx-6 w-auto mt-6 h-16 text-2xl font-semibold" style="color: #FEEFD8;">
-            Discakeで、<br />
+            Cakecordで、<br />
             あなたの居場所を見つけよう。
         </h1>
         <div class="mt-10 ml-6 w-60 h-10 flex justify-between">
